5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4358/executions/1596_2895.log
== SUBMITION (2019-04-02 09:30:04) 
-- CODE:
siteA=int(input("Qual a quantidade de jogos?"))
siteB=int(input("Qual a quantidade de jogos?"))
siteC=int(input("Qual a quantidade de jogos?"))
jogoA=200
jogoB=350
jogoC=360
freteA=45
freteB=55
freteC=65
precototalA=siteA+jogoA+freteA
precototalB=siteB+jogoB+freteB
precototalC=siteC+jogoC+freteC
print(procototalA)

-- EXECUTION TIME:
0.18471
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2895/main.py", line 2, in <module>
    siteB=int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:30:10) 
-- CODE:
siteA=int(input("Qual a quantidade de jogos?"))
siteB=int(input("Qual a quantidade de jogos?"))
siteC=int(input("Qual a quantidade de jogos?"))
jogoA=200
jogoB=350
jogoC=360
freteA=45
freteB=55
freteC=65
precototalA=siteA+jogoA+freteA
precototalB=siteB+jogoB+freteB
precototalC=siteC+jogoC+freteC
print(procototalA)

-- EXECUTION TIME:
0.189505
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2895/main.py", line 2, in <module>
    siteB=int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:30:22) 
-- CODE:
siteA=int(input("Qual a quantidade de jogos?"))
siteB=int(input("Qual a quantidade de jogos?"))
siteC=int(input("Qual a quantidade de jogos?"))
jogoA=200
jogoB=350
jogoC=360
freteA=45
freteB=55
freteC=65
precototalA=siteA+jogoA+freteA
precototalB=siteB+jogoB+freteB
precototalC=siteC+jogoC+freteC
print(procototalA)

-- EXECUTION TIME:
0.11688
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2895/main.py", line 2, in <module>
    siteB=int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:31:21) 
-- CODE:
siteA=int(input("Qual a quantidade de jogos A?"))
siteB=int(input("Qual a quantidade de jogos B?"))
siteC=int(input("Qual a quantidade de jogos C?"))
jogoA=200
jogoB=350
jogoC=360
freteA=45
freteB=55
freteC=65
precototalA=siteA+jogoA+freteA
precototalB=siteB+jogoB+freteB
precototalC=siteC+jogoC+freteC
print(procototalA)

-- EXECUTION TIME:
0.211323
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2895/main.py", line 2, in <module>
    siteB=int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:32:26) 
-- CODE:
siteA=int(input("Qual a quantidade de jogos A?"))
siteB=int(input("Qual a quantidade de jogos B?"))
siteC=int(input("Qual a quantidade de jogos C?"))
jogoA=200
jogoB=350
jogoC=360
freteA=45
freteB=55
freteC=65
precototalA=siteA*jogoA+freteA
precototalB=siteB*jogoB+freteB
precototalC=siteC*jogoC+freteC
print(procototalA)

-- EXECUTION TIME:
0.156832
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2895/main.py", line 2, in <module>
    siteB=int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:33:54) 
-- CODE:
siteA=int(input("Qual a quantidade de jogos A?"))
siteB=int(input("Qual a quantidade de jogos B?"))
siteC=int(input("Qual a quantidade de jogos C?"))
jogoA=200
jogoB=350
jogoC=360
freteA=45
freteB=55
freteC=65
precototalA=siteA*jogoA
precototalB=siteB*jogoB
precototalC=siteC*jogoC
print(procototalA + freteA)


-- EXECUTION TIME:
0.17284
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2895/main.py", line 2, in <module>
    siteB=int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:33:58) 
-- CODE:
siteA=int(input("Qual a quantidade de jogos A?"))
siteB=int(input("Qual a quantidade de jogos B?"))
siteC=int(input("Qual a quantidade de jogos C?"))
jogoA=200
jogoB=350
jogoC=360
freteA=45
freteB=55
freteC=65
precototalA=siteA*jogoA
precototalB=siteB*jogoB
precototalC=siteC*jogoC
print(procototalA + freteA)


-- EXECUTION TIME:
0.173183
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2895/main.py", line 2, in <module>
    siteB=int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:39:49) 
-- CODE:
quantidade=float("Qual a quantidade de jogos?")
valorunitario=float(input(Qual o valor unitario de cada jogo?))
frete=float(input(" Qual o valor do frete"))                                                          Total=quantidade *valorintario+frete print(total)
-- EXECUTION TIME:
0.12833
-- ERROR:
  File "/home/codebench/codes/1596/2895/main.py", line 2
    valorunitario=float(input(Qual o valor unitario de cada jogo?))
                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:40:40) 
-- CODE:
quantidade=float("Qual a quantidade de jogos?")
valorunitario=float(input(Qual o valor unitario de cada jogo?))
frete=float(input(" Qual o valor do frete"))                                                          
Total=quantidade *valorintario+frete
print(total)
-- EXECUTION TIME:
0.20206
-- ERROR:
  File "/home/codebench/codes/1596/2895/main.py", line 2
    valorunitario=float(input(Qual o valor unitario de cada jogo?))
                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:40:44) 
-- CODE:
quantidade=float("Qual a quantidade de jogos?")
valorunitario=float(input(Qual o valor unitario de cada jogo?))
frete=float(input(" Qual o valor do frete"))                                                          
Total=quantidade *valorintario+frete
print(total)
-- EXECUTION TIME:
0.107372
-- ERROR:
  File "/home/codebench/codes/1596/2895/main.py", line 2
    valorunitario=float(input(Qual o valor unitario de cada jogo?))
                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:40:46) 
-- CODE:
quantidade=float("Qual a quantidade de jogos?")
valorunitario=float(input(Qual o valor unitario de cada jogo?))
frete=float(input(" Qual o valor do frete"))                                                          
Total=quantidade *valorintario+frete
print(total)
-- EXECUTION TIME:
0.191441
-- ERROR:
  File "/home/codebench/codes/1596/2895/main.py", line 2
    valorunitario=float(input(Qual o valor unitario de cada jogo?))
                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:41:10) 
-- CODE:
quantidade=float("Qual a quantidade de jogos?")
valorunitario=float(input(Qual o valor unitario de cada jogo?))
frete=float(input(" Qual o valor do frete"))                                                          
Total=quantidade *valorintario +frete
print(total)
-- EXECUTION TIME:
0.14722
-- ERROR:
  File "/home/codebench/codes/1596/2895/main.py", line 2
    valorunitario=float(input(Qual o valor unitario de cada jogo?))
                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:56:30) 
-- CODE:
quantidade=float(input("Qual a quantidade de jogos?"))
valorunitario=float(input(Qual o valor unitario de cada jogo?))
frete=float(input(" Qual o valor do frete"))                                                          
Total=quantidade *valorintario +frete
print(total)
-- EXECUTION TIME:
0.183569
-- ERROR:
  File "/home/codebench/codes/1596/2895/main.py", line 2
    valorunitario=float(input(Qual o valor unitario de cada jogo?))
                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:57:23) 
-- CODE:
quantidade=float(input("Qual a quantidade de jogos?"))
valorunitario=float(input("Qual o valor unitario de cada jogo"))
frete=float(input(" Qual o valor do frete"))                                                          
Total=quantidade *valorintario +frete
print(total)
-- EXECUTION TIME:
0.168634
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2895/main.py", line 4, in <module>
    Total=quantidade *valorintario +frete
NameError: name 'valorintario' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:57:38) 
-- CODE:
quantidade=float(input("Qual a quantidade de jogos?"))
valorunitario=float(input("Qual o valor unitario de cada jogo"))
frete=float(input(" Qual o valor do frete"))                                                          
Total=quantidade*valorintario+frete
print(total)
-- EXECUTION TIME:
0.120146
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2895/main.py", line 4, in <module>
    Total=quantidade*valorintario+frete
NameError: name 'valorintario' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:58:21) 
-- CODE:
quantidade=float(input("Qual a quantidade de jogos?"))
valorunitario=float(input("Qual o valor unitario de cada jogo"))
frete=float(input(" Qual o valor do frete"))                                                          
Total=quantidade*valorunitario+frete
print(total)
-- EXECUTION TIME:
0.174027
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2895/main.py", line 5, in <module>
    print(total)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:58:24) 
-- CODE:
quantidade=float(input("Qual a quantidade de jogos?"))
valorunitario=float(input("Qual o valor unitario de cada jogo"))
frete=float(input(" Qual o valor do frete"))                                                          
Total=quantidade*valorunitario+frete
print(total)
-- EXECUTION TIME:
0.153305
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2895/main.py", line 5, in <module>
    print(total)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:58:38) 
-- CODE:
quantidade=float(input("Qual a quantidade de jogos?"))
valorunitario=float(input("Qual o valor unitario de cada jogo"))
frete=float(input(" Qual o valor do frete"))                                                          
Total=quantidade*valorunitario+frete
print(total)
-- EXECUTION TIME:
0.165239
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2895/main.py", line 5, in <module>
    print(total)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:58:40) 
-- CODE:
quantidade=float(input("Qual a quantidade de jogos?"))
valorunitario=float(input("Qual o valor unitario de cada jogo"))
frete=float(input(" Qual o valor do frete"))                                                          
Total=quantidade*valorunitario+frete
print(total)
-- EXECUTION TIME:
0.197048
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2895/main.py", line 5, in <module>
    print(total)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
